# mealie-discord

./: Dockerfile  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_tests_ci
.github/workflows/: build.yml
mealie_discord/: bot.py  mealie.py
tests/: test_bot.py
